[gd_scene load_steps=4 format=3 uid="uid://ws0djuc4e4r8"]

[ext_resource type="Texture2D" uid="uid://b726wqjecdd5u" path="res://UI/linked_nodes.png" id="1_rbhat"]
[ext_resource type="Script" path="res://class_regions/methods/method_link_container.gd" id="1_rsvfu"]
[ext_resource type="Texture2D" uid="uid://dp87jsrvjqb8e" path="res://UI/cross-mark_lorc.png" id="3_pru23"]

[node name="MethodLinkContainer" type="PanelContainer"]
script = ExtResource("1_rsvfu")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="MethodNameEdit" type="LineEdit" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "method_name"
placeholder_text = "method_name"

[node name="ImplementButton" type="Button" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
tooltip_text = "Implement method with nodes"
icon = ExtResource("1_rbhat")
expand_icon = true

[node name="DeleteMethodLink" type="Button" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
self_modulate = Color(0.882353, 0.439216, 0.333333, 1)
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
icon = ExtResource("3_pru23")
expand_icon = true

[connection signal="text_submitted" from="MarginContainer/HBoxContainer/MethodNameEdit" to="." method="_on_method_name_edit_text_submitted"]
